--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       FLASK_APP: main.py
       FLASK_ENV: development
       FLASK_DEBUG: 1
+      CORS_ORIGINS: http://localhost:4200,http://192.168.1.3:4200,https://sahera-webapp.ca
       DATABASE_URL: postgresql+psycopg2://user:secret@db:5432/postgres
       SECRET_KEY: dev-secret
     depends_on:
